--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   margin: 0;
   font-family: "Montserrat";
+  scroll-behavior: smooth;
 }
 body {
   margin: 0;
@@ -260,7 +261,11 @@ body {
 .sliderButton{
   display: none;
 }
-
+/* Button Styling */
+.buttonHover:hover{
+  background-color:'white';
+  border: 2px solid #0E142B;
+}
 /* Media Queries index page */
 @media only screen and (max-width:986px){
     .zigzag4{
@@ -288,8 +293,8 @@ body {
   .zigzag2 {
     margin-top: -14vh;
   }
-  
 }
+
 @media only screen and (max-width:755px){
     .dotBorder{
         display: none;
@@ -305,6 +310,21 @@ body {
     }
    
 }
+@media only screen and (max-width:786px){
+.heroPara {
+  background-color: rgba(0,0,0,0.4);
+  padding:20px;
+}
+}
+
+@media only screen and (max-width:425px){
+  .heroPara{
+  background-color: rgba(0,0,0,0.4);
+  padding:10px;
+
+  }
+}
+
 @media only screen and (max-width:987px){
     .gradient{
         margin-top:10vh !important;
@@ -329,6 +349,13 @@ body {
     bottom: 80%;
     display: flex;
     justify-content: space-around;
+  }
+}
+@media only screen and (min-width:1440px)
+{
+  .heroPara{
+    padding-left:2.8rem;
+    width: 70%;
   }
 }
 @media only screen and (min-width: 1100px) {
